# self_monitor

./: .gitignore  README.md  build.gradle.kts  categories.json  settings.gradle.kts
app/: build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/kotlin/com/selfmonitor/app/: SelfMonitorApp.kt
app/src/androidMain/kotlin/com/selfmonitor/app/services/: EnforcementService.kt  PackageReceiver.kt
app/src/androidMain/kotlin/com/selfmonitor/app/ui/: LauncherActivity.kt  NotificationManager.kt
app/src/androidMain/res/values/: strings.xml
app/src/androidMain/res/xml/: accessibility_service_config.xml
app/src/commonMain/kotlin/com/selfmonitor/app/ui/: DashboardScreen.kt  DashboardViewModel.kt
core/: build.gradle.kts
core/src/androidMain/kotlin/com/selfmonitor/core/db/: DatabaseDriverFactory.kt
core/src/androidMain/kotlin/com/selfmonitor/core/domain/: RemoteDataSourceFactory.kt
core/src/androidMain/kotlin/com/selfmonitor/core/utils/: SecretManager.kt
core/src/commonMain/kotlin/com/selfmonitor/core/db/: DatabaseDriverFactory.kt
core/src/commonMain/sqldelight/com/selfmonitor/db/: schema.sq
gui/: package-lock.json  package.json  tailwind.config.js
gui/src/: App.jsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
gui/src/components/: Dashboard.jsx
scripts/: build.ps1  force_cleanup_db.ps1  install.ps1  install_cv_tools.ps1  nuke_service.ps1  start.ps1
service/: Cargo.toml  build_log.txt  errors.txt  schema.sql
service/src/: config.rs  db.rs  engine.rs  main.rs  tracker.rs  watcher.rs
(+10 files in other folders)
