[package]
name = "self_monitor_service"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation", # Added for GetTickCount
] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] } # Added uuid
